# m3_project

./: .gitignore  requirements.txt
m3-project-app/: README.txt  setup.cfg
m3-project-app/app/: app_meta.py  ui.py
m3_project/: db.sqlite3
m3_project/m3_project/: settings.py  urls.py
